--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ SHiELD_SRC/GFDL_atmos_cubed_sphere/model/*.swp
 SHiELD_SRC/GFDL_atmos_cubed_sphere/model/*.swo
 SHiELD_SRC/GFDL_atmos_cubed_sphere/tools/*.swo
 SHiELD_SRC/GFDL_atmos_cubed_sphere/tools/*.swp
+*.swp
+*.swo
+*pycache__/
